refactor: コードを簡素化